navigation icon setup
in this i have try to set the icon of navigationbar side.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/icons8-note-keek-16.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/remixicon-line.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NOTA</title>
   </head>
